--- a/.github/workflows/playwright_2.yml
+++ b/.github/workflows/playwright_2.yml
@@ -1,12 +1,12 @@
 name: Playwright Tests
 on:
-    workflow_dispatch:
-      inputs:               
-        execution:
-          description: 'Insert the test tag'
-          required: true
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -18,7 +18,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test --grep @${{ inputs.execution }}
+      run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
