--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,3 +25,6 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - uses: actions/download-artifact@v4
+      with:
+        name: playwright-report    
